@@ -108,7 +108,8 @@ many cases referencing the Bugzilla bug number
    - bug 850 - Ipv4GlobalRouting::LookupGlobal bug
    - bug 864 - Invalid return value in UdpSocketImpl::Send and Ipv4RawSocketImpl::Send
    - bug 865 - Ipv4RawSocketImpl::RecvFrom does not return from address all the time.
-   - Bug 859 - Output interface estimation for the source address bound socket in IPv4 Raw socket
+   - bug 859 - Output interface estimation for the source address bound socket in IPv4 Raw socket
+   - bug 857 - Link-Local Multicast handle in Ipv4 Output processing 
 
 Known issues
 ------------
